--- a/styles/aikstyles.css
+++ b/styles/aikstyles.css
@@ -1,2 +1,56 @@
-.attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+* {
+    transition: 1s;
+    box-sizing: border-box;
+}
+
+body{
+    margin: 0;
+}
+
+li {
+    list-style-type: none;
+}
+
+nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;    
+}
+
+nav>ul {
+    align-items : center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+button {
+    display: none;
+}
+
+
+.attribution {
+    font-size: 11px;
+    text-align: center;
+}
+
+.attribution a {
+    color: hsl(228, 45%, 44%);
+}
+
+@media only screen and (min-width: 1280px) {
+    nav {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;   
+        padding-left: 5%;
+    }
+    nav>ul {
+        flex-direction: row;
+        width: 30%;
+    }
+    button {
+        display: block;
+        align-items: flex-end;
+    }
+}
