--- a/styles/aikstyles.css
+++ b/styles/aikstyles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@500&display=swap');
 
 * {
     transition: 1s;
@@ -59,6 +59,7 @@ nav>figure {
 nav>ul {
     display: none;
     height: inherit;
+    margin-bottom: 0;
     border: 1px solid red;
 }
 
