--- a/styles/aikstyles.css
+++ b/styles/aikstyles.css
@@ -14,6 +14,10 @@ li {
     list-style-type: none;
 }
 
+a {
+    text-decoration: none;
+}
+
 p {
     color: hsl(233, 8%, 62%);
 }
@@ -123,12 +127,13 @@ main {
     flex-direction: column-reverse;
     background-image: url("../images/bg-intro-mobile.svg");
     background-repeat: no-repeat;
-    margin-bottom: 20%;
+    padding-bottom: 20%;
 }
 
 main>figure>img {
     max-width: 100%;
     width: 100%;
+    margin-top: -55px;
 }
 
 #hamburger_list {
