--- a/styles/aikstyles.css
+++ b/styles/aikstyles.css
@@ -23,13 +23,17 @@ p {
 }
 
 
-h1,h2,h4 {
+h1>a,
+h2>a,
+h4>a {
     color: hsl(233, 26%, 24%);
     font-weight: 550;
     cursor: pointer;
 }
 
-h1:hover, h4:hover {
+h1>a:hover,
+h2>a:hover,
+h4>a:hover {
     color: hsl(136, 65%, 51%);
 }
 
@@ -73,7 +77,7 @@ nav>ul {
     margin-bottom: 0;
 }
 
-nav>ul>li>a{
+nav>ul>li>a {
     cursor: pointer;
     position: relative;
     color: hsl(233, 8%, 62%);
@@ -83,31 +87,31 @@ nav>ul>li>a{
     display: none;
     background: linear-gradient(to right, hsl(136, 65%, 51%), hsl(192, 70%, 51%));
     width: 50px;
-    margin-left: -5px;
-    margin-top: 26px;
+    margin-left: 3px;
+    margin-top: 24px;
     height: 1mm;
     position: absolute;
 }
 
 .bder2 {
-    margin-left: -5px;
+    margin-left: 3px;
 }
 
 .bder3 {
-    margin-left: -4px;
+    margin-left: 3px;
     width: 60px;
 }
 
 .bder5 {
-    margin-left: -4px;
+    margin-left: 3px;
     width: 60px;
 }
 
-.border_active{
+.border_active {
     display: block;
 }
 
-nav>ul>li:hover  {
+nav>ul>li:hover {
     color: hsl(233, 26%, 24%);
 }
 
@@ -121,26 +125,12 @@ nav>button {
     cursor: pointer;
 }
 
-main {
-    display: flex;
-    flex-direction: column-reverse;
-    background-image: url("../images/bg-intro-mobile.svg");
-    background-repeat: no-repeat;
-    padding-bottom: 20%;
-}
-
-main>figure>img {
-    max-width: 100%;
-    width: 100%;
-    margin-top: -55px;
-}
-
 #hamburger_list {
     position: absolute;
     display: none;
     flex-direction: column;
     justify-content: space-between;
-    max-width: 85%;
+    max-width: 88%;
     width: 100%;
     top: 100%;
     left: 5%;
@@ -155,9 +145,55 @@ main>figure>img {
 #hamburger_list>li {
     align-self: center;
     color: hsl(233, 26%, 24%);
-    margin : 0 auto;
     padding: 10px;
-    font-size: 12px;
+    font-size: 13px;
+}
+
+#hamburger_list>li>a {
+    color: hsl(233, 26%, 24%);
+    position: relative;
+}
+
+.ham_border {
+    display: none;
+    background: linear-gradient(to right, hsl(136, 65%, 51%), hsl(192, 70%, 51%));
+    width: 50px;
+    height: 1mm;
+    margin-top: 5px;
+    margin-left: -8px;
+    position: absolute;
+}
+
+.ham_bder2 {
+    width: 55px;
+    margin-left: -3px;
+}
+
+.ham_bder3 {
+    margin-left: -10px;
+}
+
+.ham_bder4 {
+    width: 55px;
+    margin-left: -4px;
+}
+
+.ham_border_active {
+    display: block;
+}
+
+main {
+    display: flex;
+    flex-direction: column-reverse;
+    background-image: url("../images/bg-intro-mobile.svg");
+    background-repeat: no-repeat;
+    padding-bottom: 20%;
+}
+
+main>figure>img {
+    max-width: 100%;
+    width: 100%;
+    margin-top: -52px;
 }
 
 main>div {
@@ -175,11 +211,13 @@ main>div>h1 {
     color: hsl(233, 26%, 24%);
     font-weight: 580;
     margin-bottom: 0;
+    margin-top: 10px;
 }
 
 main>div>p {
     max-width: 80%;
     line-height: 1.5rem;
+    font-size: 15px;
 }
 
 section {
@@ -204,13 +242,14 @@ section>div:first-child>h2 {
     margin-bottom: 0;
 }
 
-section>div:first-child>h2:hover {
+section>div:first-child>h2>a:hover {
     color: hsl(136, 65%, 51%);
 }
 
 section>div:first-child>p {
     max-width: 80%;
     line-height: 1.5rem;
+    font-size: 15px;
 }
 
 .cont1 {
@@ -229,6 +268,7 @@ section>div:first-child>p {
 .cont1>p {
     max-width: 85%;
     line-height: 1.5rem;
+    font-size: 15px;
 }
 
 article {
@@ -247,7 +287,7 @@ article>div {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-} 
+}
 
 article>div>div {
     align-self: center;
@@ -355,12 +395,16 @@ footer>ul>li {
     cursor: pointer;
 }
 
+footer>ul>li>a {
+    color: hsl(0, 0%, 98%);
+}
+
 footer>div>button {
     margin-top: 25px;
     margin-bottom: 20px;
 }
 
-footer>ul>li:hover {
+footer>ul>li>a:hover {
     color: hsl(136, 65%, 51%);
 }
 
@@ -557,16 +601,29 @@ footer>ul>li:hover {
 @media only screen and (min-width: 912px) {
     body {
         overflow-x: hidden;
+        height: 100vh;
     }
 
-    button{
+    button {
         padding: 10px;
         padding-left: 20px;
         padding-right: 20px;
         font-size: 18px;
     }
 
-    #hamburger{
+    section {
+        width: 100vw;
+    }
+
+    article {
+        width: 100vw;
+    }
+
+    footer {
+        width: 100vw;
+    }
+
+    #hamburger {
         display: none;
     }
 
@@ -603,6 +660,22 @@ footer>ul>li:hover {
         margin-top: -10px;
     }
 
+    .border {
+        margin-left: 4px;
+    }
+
+    .bder2 {
+        margin-left: 5px;
+    }
+
+    .bder3 {
+        margin-left: 6px;
+    }
+
+    .bder5 {
+        margin-left: 6px;
+    }
+
     main {
         flex-direction: row;
         background-image: url("../images/bg-intro-desktop.svg");
@@ -614,7 +687,7 @@ footer>ul>li:hover {
         overflow-x: hidden;
         padding-bottom: 0;
     }
-    
+
     main>div {
         align-self: center;
         justify-content: flex-start;
@@ -649,8 +722,8 @@ footer>ul>li:hover {
     section>div:first-child>h2 {
         text-align: start;
         font-size: 28px;
-    }   
-    
+    }
+
     section>div:first-child>p {
         max-width: 60%;
         font-size: 15px;
@@ -664,12 +737,12 @@ footer>ul>li:hover {
         align-items: flex-start;
     }
 
-    .cont1{
+    .cont1 {
         justify-content: flex-start;
-        align-items: flex-start; 
+        align-items: flex-start;
     }
 
-    .cont1>figure{
+    .cont1>figure {
         margin: 0;
     }
 
@@ -687,7 +760,7 @@ footer>ul>li:hover {
     article {
         padding-top: 2%;
         justify-content: flex-start;
-        align-items: flex-start; 
+        align-items: flex-start;
         padding-left: 50px;
         padding-top: 5%;
         padding-bottom: 6%;
@@ -697,8 +770,8 @@ footer>ul>li:hover {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        align-items: flex-start; 
-    } 
+        align-items: flex-start;
+    }
 
     article>h2 {
         font-size: 28px;
@@ -732,7 +805,7 @@ footer>ul>li:hover {
         line-height: 1.2rem;
     }
 
-    footer{
+    footer {
         flex-direction: row;
         justify-content: space-between;
         padding-top: 20px;
@@ -745,7 +818,7 @@ footer>ul>li:hover {
         align-self: flex-start;
     }
 
-    footer>div>figure{
+    footer>div>figure {
         margin-left: 0;
     }
 
@@ -769,8 +842,9 @@ footer>ul>li:hover {
         font-size: 12px;
     }
 }
+
 @media only screen and (min-width: 1280px) {
-    button{
+    button {
         padding: 10px;
         padding-left: 20px;
         padding-right: 20px;
@@ -781,7 +855,7 @@ footer>ul>li:hover {
         padding-left: 10%;
     }
 
-    nav>button{
+    nav>button {
         padding: 10px;
         padding-left: 20px;
         padding-right: 20px;
@@ -824,7 +898,7 @@ footer>ul>li:hover {
     }
 
     .cont1>p {
-        line-height: 1.3rem; 
+        line-height: 1.3rem;
         font-size: 14px;
     }
 
@@ -839,20 +913,20 @@ footer>ul>li:hover {
     }
 
     article>div>div>p {
-        line-height: 1.2rem; 
+        line-height: 1.2rem;
         font-size: 12px;
         margin-bottom: 8%;
-    }    
+    }
 
     #currency>img {
         height: 160px;
     }
 
-    footer{
+    footer {
         padding-left: 14%;
     }
 
-    footer>div>button{
+    footer>div>button {
         padding: 10px;
         padding-left: 20px;
         padding-right: 20px;
