--- a/styles/aikstyles.css
+++ b/styles/aikstyles.css
@@ -10,6 +10,30 @@ body {
     font-family: 'Public Sans';
 }
 
+#preloader {
+    display: none;
+    flex-direction: column;
+    top: 50%;
+    left: 20%;
+    position: absolute;
+}
+
+#preloader>div{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-left: 30px;
+}
+
+#preloader>div>span {
+    border-radius: 50%;
+    width: 10px;
+    height: 10px;
+    background-color: hsl(233, 8%, 62%);
+    margin-right: 10px;
+}
+
 li {
     list-style-type: none;
 }
@@ -111,7 +135,7 @@ nav>ul>li>a {
     display: block;
 }
 
-nav>ul>li:hover {
+nav>ul>li>a:hover {
     color: hsl(233, 26%, 24%);
 }
 
@@ -423,8 +447,13 @@ footer>ul>li>a:hover {
 }
 
 @media only screen and (min-width: 280px) {
+    main>figure>img {
+        margin-top: -10px;
+    }
+
     main>div>h1 {
         font-size: 25px;
+        margin-top: 50px;
     }
 
     main>div>p {
@@ -444,13 +473,13 @@ footer>ul>li>a:hover {
     }
 
     .cont1>h4 {
-        font-size: 25px;
+        font-size: 22px;
     }
 
     .cont1>p {
-        font-size: 15px;
+        font-size: 14px;
         max-width: 85%;
-        line-height: 1.5rem;
+        line-height: 1.4rem;
     }
 
     article>h2 {
@@ -468,6 +497,7 @@ footer>ul>li>a:hover {
 
     article>div>div>p {
         font-size: 14px;
+        line-height: 1.3rem;
     }
 
     footer {
@@ -521,8 +551,44 @@ footer>ul>li>a:hover {
         margin-top: 20px;
     }
 
+    #hamburger_list {
+        top: 150%;
+    }
+
+    #hamburger_list>li {
+        margin-bottom: 20px;
+    }
+
+    #hamburger_list>li>a {
+        font-size: 20px;
+    }
+
+    .ham_border{
+        width: 75px;
+        margin-left: -9px;
+    }
+
+    .ham_bder2 {
+        width: 80px;
+        margin-left: -2px;
+    }
+    
+    .ham_bder3 {
+        margin-left: -15px;
+    }
+    
+    .ham_bder4 {
+        width: 80px;
+        margin-left: -3px;
+    }
+
+    main {
+        background-size: 100% 65%;
+    }
+
     main>div>h1 {
         font-size: 45px;
+        margin-top: 65px;
     }
 
     main>div>p {
@@ -673,7 +739,7 @@ footer>ul>li>a:hover {
     }
 
     .bder5 {
-        margin-left: 6px;
+        margin-left: 9px;
     }
 
     main {
@@ -860,6 +926,18 @@ footer>ul>li>a:hover {
         padding-left: 20px;
         padding-right: 20px;
         font-size: 13px;
+    }
+
+    .bder2 {
+        margin-left: 7px;
+    }
+
+    .bder3 {
+        margin-left: 8px;
+    }
+
+    .bder5 {
+        margin-left: 8px;
     }
 
     main {
