--- a/styles/aikstyles.css
+++ b/styles/aikstyles.css
@@ -11,14 +11,20 @@ body {
 }
 
 #preloader {
-    display: none;
-    flex-direction: column;
-    top: 50%;
-    left: 20%;
+    width: 100%;
+    height: 100%;
     position: absolute;
+    top: 0;
+    left: 0;
+    background-color: hsl(0, 0%, 100%);
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-#preloader>div{
+#bubble{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -26,7 +32,7 @@ body {
     margin-left: 30px;
 }
 
-#preloader>div>span {
+#bubble>span {
     border-radius: 50%;
     width: 10px;
     height: 10px;
